# dotfiles

./: .chezmoi.yaml.tmpl  .chezmoiexternal.yaml  .chezmoiignore  README.md  _sshp  dot_conkyrc.tmpl  dot_gitconfig.tmpl  dot_tmux.conf  dot_zshrc  executable_dot_conky_bluetooth_status  executable_dot_conky_mic_status  executable_dot_conky_player  run_01_update-oh-my-zsh-permissions.sh  run_30_install-packages.sh  run_once_30_install-packages.sh.tmpl
dot_config/alacritty/: alacritty.toml  alacritty.yml  alacritty.yml.tmpl
dot_config/hypr/: hyprland.conf
dot_config/mako/: config
dot_config/nvim/: executable_init.vim  executable_init.vim.bak  lazy-lock.json
dot_config/nvim/lua/config/: indent.lua  keymaps.lua  lspconfig.lua  options.lua
dot_config/nvim/lua/plugins/: base64.lua  bufferline.lua  copilot.lua  example.lua  fugitive.lua  harpoon.lua  live-command.lua  mason.lua  nvim-dap.lua  oil.lua  signature-complete.lua  telescope.lua  tree.lua
dot_config/private_fish/conf.d/: abbr.fish
dot_config/private_fish/functions/: vault.fish
dot_config/sway/: checkupdates.go  config.tmpl  executable_checkupdates  executable_headset.sh  executable_keymap.sh  executable_myclipman  executable_toggleBluetooth  go.mod
dot_config/sway/headset/: headset.py  pyproject.toml
dot_config/sway/xremap/: README.md  config.yaml
dot_config/zsh/: aliases.zsh  aliases.zsh.tmpl  complete.zsh  config.zsh  config.zsh.tmpl  env.zsh  env.zsh.tmpl  functions.zsh  functions.zsh.tmpl  zshrc.tmpl
dot_wt/: executable_list-work-status
